Edited wiki page GettingStarted through web user interface.

--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -11,13 +11,13 @@ Add your content here.
 To use in your android activity:
 
   * Get your locale
-     {{{mCurLocale = this.getResources().getConfiguration().locale;}}}
+     {{{Locale curLocale = this.getResources().getConfiguration().locale;}}}
 
   * Set up your translation instance
-     {{{mI18Translator = new I18nTranslator(mCurLocale.getLanguage());}}}
+     {{{I18nTranslator i18Translator = new I18nTranslator(curLocale .getLanguage());}}}
 
   * Translate your String auto-magically
-     {{{String text = mI18Translator.translateString("Please enter correct keys to unlock.");}}}
+     {{{String text = i18Translator.translateString("Please enter correct keys to unlock.");}}}
 
   * Translate your Android Resource String auto-magically
-     {{{String text = mTranslator.translateString(getString(R.string.menu_feedback);}}}
+     {{{String text = i18Translator.translateString(getString(R.string.menu_feedback);}}}
