Edited wiki page GettingStarted through web user interface.

--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -14,10 +14,10 @@ To use in your android activity:
      {{{Locale curLocale = this.getResources().getConfiguration().locale;}}}
 
   * Set up your translation instance
-     {{{I18nTranslator i18Translator = new I18nTranslator(curLocale .getLanguage());}}}
+     {{{I18nTranslator i18nTranslator = new I18nTranslator(curLocale .getLanguage());}}}
 
   * Translate your String auto-magically
-     {{{String text = i18Translator.translateString("Please enter correct keys to unlock.");}}}
+     {{{String text = i18nTranslator.translateString("Please enter correct keys to unlock.");}}}
 
   * Translate your Android Resource String auto-magically
-     {{{String text = i18Translator.translateString(getString(R.string.menu_feedback);}}}
+     {{{String text = i18nTranslator.translateString(getString(R.string.menu_feedback);}}}
